# socialseed-e2e

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AI_CONTRIBUTORS.md  ARCHITECTURAL_REVIEW.md  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD_UI_ROADMAP.md  Dockerfile  FRAMEWORK_REFACTORING_SUMMARY.md  GRPC_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_DOCTOR.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  TASK_MIGRACION_PIP.md  demo_load_test.py  docker-compose.observability.yml  e2e-framework.md  e2e.conf  issues.md  lista_de_issues.md  mkdocs.yml  mypy_output2.txt  opencode.json  project_knowledge.json  pyproject.toml  requirements.txt  ruff_output2.txt  setup.cfg  setup.py  verify_fixes.py
.agent/: AGENT_GUIDE.md  BEST_PRACTICES.md  CLI_REFERENCE.md  ENV_VARIABLES.md  FRAMEWORK_CONTEXT.md  GRPC_TESTING.md  ISSUE_RESOLUTION_WORKFLOW.md  LANGUAGE_AGNOSTIC.md  QUICKSTART.md  REST_TESTING.md  TODO_COMPLETE.md  TROUBLESHOOTING.md  WORKFLOWS.md  WORKFLOW_GENERATION.md  architecture_map.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  e2e-matrix.yml  e2e.yml  release.yml  update-architecture.yml
.issues/: 002_strategic_backlog.md  003_post_implementation_issues.md  004_agent_documentation_issues.md  004_e2e_testing_issues.md  005_fresh_install_test.md  007_pending_tasks.md  008_architectural_improvements.md  2026-0219-cli-demo-release.md  a_fixear.md  comandos-a-testear.md  mejoras.md  todo.md
.issues/finalizados/: ISSUE-021_discover_project_name.md  ISSUE-022_plan_strategy_project_name.md  ISSUE-023_regression_manifest.md  ISSUE-024_analyze_flaky_option.md  ISSUE-025_autonomous_run_strategy.md  ISSUE-026_tui_install.md
.issues/todo/: ISSUE-006_encoding_init.md  ISSUE-007_new_service_path.md  ISSUE-008_new_test_path.md  ISSUE-009_httpx_dependency.md  ISSUE-010_build_index_help.md  ISSUE-011_import_curl_dir.md  ISSUE-012_framework_generic.md  ISSUE-013_observe_threading.md  ISSUE-014_manifest_path_duplication.md  ISSUE-015_ast_nameconstant.md  ISSUE-016_manifest_query_path.md  ISSUE-017_mock_generate_api_option.md  ISSUE-018_mock_run_fastapi.md  ISSUE-019_manifest_project_name.md  ISSUE-020_translate_description.md
.opencode/agents/: context.md  save-chat.md
.opencode/chat_history/: 20250131_configuracion_sistema_contexto.md  20260131_inicio_sesion_contexto.md  20260201_mock_api_completion.md  README.md  template.md
ai_feedback/: feedback.jsonl
demos/grpc/: api-grpc-demo.proto  api-grpc-demo.py
docs/: AGENT_FILE_STRUCTURE.md  AGENT_GUIDE.md  CANDLESTICK_CHARTS_DESIGN.md  GRPC_DOCUMENTATION_INDEX.md  Makefile  README.md  advanced-performance.md  ai-discovery-report.md  ai-learning.md  ai-mocking.md  ai-orchestrator.md  ai-setup.md  api-reference.md  assertions.md  autonomous-test-generation-guide.md  autonomous-test-generation.md  chaos-testing.md  ci-cd-templates.md  ci-cd.md  cli-architecture.md  cli-commands.md  cli-reference.md  cloud-integrations.md  collaboration.md  conf.py  configuration.md  contract-testing.md  database-testing.md  deep-context-awareness.md  demos.md  docker-compose-integration.md  github-pages-setup.md  grpc-testing.md  how-it-works.md  html-reporting.md  ide-extensions.md  index.rst  installation.md  license.rst  make.bat  (+19 more)
docs/_static/: custom.css
docs/api/: cli.rst  core.rst  models.rst  utils.rst
docs/community/: README.md
docs/dashboard-issues/: 001_dashboard_variables.md  README.md
docs/tutorials/: README.md  api-explorer.md
examples/: ai_mocking_example.py  html_reporting_example.py  performance_profiling_example.py
examples/01-basic-crud/: README.md  api.py  e2e.conf  items.db
examples/02-auth-jwt/: .gitignore  README.md  api.py  e2e.conf  requirements.txt
examples/03-microservices/: README.md  e2e.conf  requirements.txt
examples/advanced_usage/: README.md  auth_headers_example.py  env_variables_example.py  fixtures_example.py  parameterized_tests_example.py
examples/basic_api_test/: README.md  e2e.conf
examples/docker/: docker_compose_example.py
examples/graphql/: blog_graphql_page.py
examples/grpc/: README.md  __init__.py  mock_server.py  user.proto  user_grpc_page.py
examples/interactive_doctor/: example_interactive_doctor.py
examples/plugins/: custom_assertions_plugin.py  hook_plugin.py  json_reporter_plugin.py
examples/traceability/: example_traceability.py
examples/websocket/: README.md  chat_service_page.py  mock_server.py  test_websocket.py
ide-extensions/pycharm/: build.gradle.kts
ide-extensions/vscode/: package.json
licenses/: THIRD_PARTY_NOTICES.md
playground/: AI_AGENT_GUIDE.md  DEVELOPER_GUIDE.md  README.md
playground/scripts/: README.md  generate-tests.py  health-check.sh  start-all.sh  stop-all.sh
playground/tradingview/: app.py  index.html
playground/videos/: README.md
scripts/: gen_more_vision_issues.py  gen_more_vision_issues_v3.py  gen_more_vision_issues_v4.py  gen_vision_issues.py  setup_dev.sh  update_architecture.py
security/: red-team-logs.json  vulnerability-report-0853a64d.json  vulnerability-report-3cc0e1fa.json
src/socialseed_e2e/: __init__.py  __main__.py  __version__.py  ai_command_center.py  business_traceability.py  cli.py  console_config.py  demo_factory.py  mock_server.py  traffic_test_generator.py  verify_fixes.py
src/socialseed_e2e.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_red_team_adversary.py  test_semantic_analyzer.py  test_telemetry.py  validate_installation.py
tests/fixtures/: README.md  __init__.py  mock_api.py
tests/integration/: __init__.py  test_cli_integration.py  test_mock_api_integration.py
tests/project_manifest/: test_business_logic_inference.py  test_discovery_report.py  test_dummy_data_generator.py  test_observer.py
tests/scanner/: test_scanner.py  verify_scanners.py
tests/unit/: __init__.py  test_ai_learning.py  test_ai_mocking.py  test_auth.py  (+30 more)
(+804 files in other folders)
