[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socialseed-e2e"
version = "0.1.2"
authors = [
    {name = "Dairon Pérez Frías", email = "dairon.perezfrias@gmail.com"},
]
description = "Framework E2E para testing de APIs REST con Playwright"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["testing", "e2e", "api", "playwright", "rest", "grpc", "framework"]
dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "typing-extensions>=4.8.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
    "flask>=2.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
grpc = [
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "protobuf>=4.24.0",
]

[project.scripts]
e2e = "socialseed_e2e.cli:main"
socialseed-e2e = "socialseed_e2e.cli:main"

[project.urls]
Homepage = "https://github.com/daironpf/socialseed-e2e"
Documentation = "https://github.com/daironpf/socialseed-e2e/tree/main/docs"
Repository = "https://github.com/daironpf/socialseed-e2e"
Issues = "https://github.com/daironpf/socialseed-e2e/issues"
Changelog = "https://github.com/daironpf/socialseed-e2e/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
socialseed_e2e = ["*.md", "templates/*.template"]

# Black formatter
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

# isort
[tool.isort]
profile = "black"
line_length = 100

# mypy
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests - fast, isolated tests for individual functions/classes",
    "integration: Integration tests - test component interactions and workflows",
    "slow: Slow tests - tests that take significant time to run",
    "cli: CLI command tests",
    "core: Core framework tests",
    "e2e: End-to-end tests",
    "mock_api: Tests using the mock Flask API",
    "grpc: Tests for gRPC protocol support",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/socialseed_e2e"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/templates/*",
]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"
title = "socialseed-e2e Coverage Report"
