[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socialseed-e2e"
version = "0.1.6"
authors = [
    {name = "Dairon Pérez Frías", email = "dairon.perezfrias@gmail.com"},
]
description = "Framework E2E para testing de APIs REST con Playwright"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["testing", "e2e", "api", "playwright", "rest", "grpc", "framework"]
dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "typing-extensions>=4.8.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "jsonschema>=4.0.0",
    "jinja2>=3.0.0",
    "websocket-client>=1.0.0",
    "Faker>=19.0.0",
    "aiohttp>=3.9.0",
    "email-validator>=2.0.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
grpc = [
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "protobuf>=4.24.0",
]
tui = [
    "textual>=0.41.0",
]
mock = [
    "flask>=2.0.0",
]
rag = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
secrets = [
    "hvac>=1.0.0",
    "boto3>=1.26.0",
]
visual = [
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]
dashboard = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-socketio[asyncio]>=5.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
    "pillow>=10.0.0",
    "types-requests>=2.31.0",
    "types-pymysql>=1.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
]
full = [
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "protobuf>=4.24.0",
    "textual>=0.41.0",
    "flask>=2.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "hvac>=1.0.0",
    "boto3>=1.26.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-socketio[asyncio]>=5.10.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
]

[project.scripts]
e2e = "socialseed_e2e.cli:main"
socialseed-e2e = "socialseed_e2e.cli:main"

[project.urls]
Homepage = "https://github.com/daironpf/socialseed-e2e"
Documentation = "https://github.com/daironpf/socialseed-e2e/tree/main/docs"
Repository = "https://github.com/daironpf/socialseed-e2e"
Issues = "https://github.com/daironpf/socialseed-e2e/issues"
Changelog = "https://github.com/daironpf/socialseed-e2e/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
socialseed_e2e = ["*.md", "templates/*.template"]

# Black formatter
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

# isort
[tool.isort]
profile = "black"
line_length = 100

# mypy
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests - fast, isolated tests for individual functions/classes",
    "integration: Integration tests - test component interactions and workflows",
    "slow: Slow tests - tests that take significant time to run",
    "cli: CLI command tests",
    "core: Core framework tests",
    "e2e: End-to-end tests",
    "mock_api: Tests using the mock Flask API",
    "grpc: Tests for gRPC protocol support",
    "asyncio: Tests that use asyncio",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/socialseed_e2e"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/templates/*",
]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 45
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"
title = "socialseed-e2e Coverage Report"

# Ruff linter configuration
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E722",  # bare except (common in exception handling)
    "F841",  # local variable unused (minor)
    "E501",  # line too long (not critical)
    "F811",  # redefinition of unused (common in __init__.py)
    "E741",  # ambiguous variable name (common in list comprehensions)
    "B904",  # raise in except (common pattern)
    "F821",  # undefined name (may be conditional imports)
    "F402",  # import shadowed by loop
    "F403",  # star import (protobuf generated)
    "B007",  # unused loop variable
    "E402",  # import not at top of file (conditional imports)
    "E721",  # type comparison (use isinstance instead)
    "F823",  # local variable referenced before assignment
    "F601",  # dictionary key repeated
    "F401",  # unused imports (conditional imports)
    "B025",  # duplicate exception
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
