[metadata]
name = socialseed-e2e
version = attr: socialseed_e2e.__version__.__version__
description = Framework E2E para testing de APIs REST con Playwright
long_description = file: README.md
long_description_content_type = text/markdown
author = Dairon Pérez
author_email = dairon.perezfrias@gmail.com
license = MIT
license_files = LICENSE
keywords = testing, e2e, api, playwright, rest, framework
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    playwright>=1.40.0
    pydantic>=2.0.0
    pyyaml>=6.0
    requests>=2.31.0
    typing-extensions>=4.8.0
    click>=8.0.0
    rich>=13.0.0

[options.packages.find]
where = src

[options.package_data]
socialseed_e2e = templates/*.template, *.md

[options.entry_points]
console_scripts =
    e2e = socialseed_e2e.cli:main
    socialseed-e2e = socialseed_e2e.cli:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.21.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    twine>=4.0.0
    build>=0.10.0
docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.3.0
    myst-parser>=2.0.0
